textarea element no-wrap bug fixed. Mobile styling completed. Desktop styling completed

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -22,6 +22,7 @@ form div {
 }
 #comments {
     height: 5em;
+    white-space: normal;
 }
 
 /* FORM GRID ORGANIZATION */
@@ -30,7 +31,7 @@ form {
     grid-template-columns: 1fr 2fr 1fr 2fr;
     grid-template-rows: max-content max-content max-content max-content max-content;
     row-gap: 10%;
-    margin: 5% 20%;
+    margin: 0% 20% 5% 20%;
     padding: 5% 0% 25% 0%;
 }
 #naming {
@@ -69,7 +70,7 @@ form {
     label {
         display: none;
     }
-    input {
+    input, textarea {
         width: 100%;
         height: 3em;
         border-left-width: 0%;
@@ -92,5 +93,46 @@ form {
     button {
         height: 3em;
         width: 25%;
+    }
+}
+
+/* Desktop specific form layout */
+@media screen and (min-width: 900px){
+    form {
+        row-gap: 3%;
+        padding: 5% 0%;
+        margin: 0% 20%;
+    }
+    form div {
+        margin: 0%;
+        margin-bottom: 7%;
+    }
+    #naming {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+    #naming > * {
+        width: 49%;
+    }
+    form > div > input {
+        width: 100%;
+        height: 2em;
+    }
+    form > div > textarea {
+        width: 100%;
+    }
+    form > div > label {
+        width: 100%;
+    }
+    button {
+        width: 25%;
+        height: 3em;
+    }
+    #buttonsDiv {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
     }
 }
